testsuite/tests/explicit-dicts/should_fail/all.T
test('NoTyVar', normal, compile_fail, [''])
test('RoleNom', normal, compile_fail, [''])
